# AirHockey

./: .gitignore  AirHockey.cpp  AirHockey.sln  AirHockey.vcxproj  AirHockey.vcxproj.filters  CMakeLists.txt  README.md  UI.cpp  UI.h  UI_text.cpp  UI_text.h  audio.cpp  audio.h  binaryIO.cpp  binaryIO.h  button.cpp  button.h  camera.cpp  camera.h  charFunctions.cpp  charFunctions.h  config.cpp  config.h  config.txt  customMath.h  gameInfo.h  gameNetworking.cpp  gameNetworking.h  gameObject.cpp  gameObject.h  goal.cpp  goal.h  log.csv  main.cpp  menu.cpp  menu.h  paddle.cpp  paddle.h  physicalObject.h  physicsHelper.cpp  (+10 more)
2D_graphics/: 2D_graphics.h  UDP_com.cpp  UDP_com6.cpp  timer.cpp
2D_graphics/DirectX_window/: launch_DirectX.bat  showDirectX.ahk  window_size.txt
Debug/: AirHockey.exe.recipe  AirHockey.vcxproj.FileListAbsolute.txt
Debug/AirHockey.tlog/: AirHockey.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DebugHost/: AirHockey-Host.exe.recipe  AirHockey.vcxproj.FileListAbsolute.txt
DebugHost/AirHockey.tlog/: AirHockey.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
assets/tables/: funkyMap.txt  loading.txt  table.txt
raw files/: game logo.pdn  gameLogo2.pdn
raw files/3D Models/: funMap.SLDDRW  funMap.SLDPRT
